@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.flexiblepower.defpi</groupId>
 	<artifactId>service-parent</artifactId>
-	<version>17.11.5-SNAPSHOT</version>
+	<version>19.10-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>dEF-Pi service parent POM</name>
@@ -62,8 +63,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.source>1.8</java.source>
 		<java.target>1.8</java.target>
+		<license.licenseName>apache_v2</license.licenseName>
 
-		<defpi.version>17.11.5-SNAPSHOT</defpi.version>
+		<defpi.version>19.10-SNAPSHOT</defpi.version>
 
 		<defpi.sources.generated>${project.build.directory}/generated-sources/java</defpi.sources.generated>
 		<defpi.resources.generated>${project.build.directory}/generated-resources/defpi</defpi.resources.generated>
@@ -80,10 +82,9 @@
 		<docker.imageName>${docker.registry}/services/${project.artifactId}</docker.imageName>
 	</properties>
 
-	<modules>
-		<module>../../dashboard-gateway</module>
-		<module>../../dashboard</module>
-	</modules>
+	<prerequisites>
+		<maven>3.0.5</maven>
+	</prerequisites>
 
 	<!-- Where to push the service parent itself, should not be used by children -->
 	<distributionManagement>
@@ -94,29 +95,15 @@
 		</snapshotRepository>
 	</distributionManagement>
 
-	<!-- Where to find dependencies -->
-	<repositories>
-		<repository>
-			<id>sonatype-snapshot</id>
-			<name>Sonatype snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-
-	<!-- Where to find plugins -->
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-snapshot</id>
-			<name>Sonatype snapshot repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.flexiblepower.defpi</groupId>
+				<artifactId>raml-service</artifactId>
+				<version>${defpi.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<!-- Use the defpi-service library to communicate with orchestrator -->
@@ -125,20 +112,98 @@
 			<artifactId>service</artifactId>
 			<version>${defpi.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
-				<configuration>
-					<source>${java.source}</source>
-					<target>${java.target}</target>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
+					<configuration>
+						<source>${java.source}</source>
+						<target>${java.target}</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M2</version>
+					<configuration>
+						<systemProperties>
+							<property>
+								<name>log4j.configurationFile</name>
+								<value>src/test/resources/log4j2.xml</value>
+							</property>
+						</systemProperties>
+					</configuration>
+				</plugin>
+
+				<!-- These are just to set the version -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.1.1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.0.1</version>
+					<configuration>
+						<additionalOptions>
+							<additionalOption>--add-modules java.xml.bind</additionalOption>
+							<additionalOption>--add-modules java.xml.ws.annotation</additionalOption>
+							<!-- additionalOptions>-html5</additionalOptions -->
+						</additionalOptions>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.7.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<profiles>
@@ -151,8 +216,10 @@
 					<missing>.noservice</missing>
 				</file>
 			</activation>
+
 			<build>
 				<plugins>
+					<!-- Use the def-pi plugin to generate stubs -->
 					<plugin>
 						<groupId>org.flexiblepower.defpi</groupId>
 						<artifactId>defpi-maven-plugin</artifactId>
@@ -168,6 +235,7 @@
 						</executions>
 					</plugin>
 
+					<!-- Add generated code to the build path -->
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>build-helper-maven-plugin</artifactId>
@@ -192,7 +260,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.20</version>
 						<configuration>
 							<systemProperties>
 								<property>
@@ -206,7 +273,6 @@
 					<!-- The resource plugin resolves maven variables in the docker files -->
 					<plugin>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.0.2</version>
 						<configuration>
 							<resources>
 								<resource>
@@ -240,7 +306,7 @@
 					<!-- The assembly plugin puts all java code in one jar -->
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.6</version>
+						<version>3.1.1</version>
 						<configuration>
 							<archive>
 								<manifest>
@@ -267,7 +333,17 @@
 					<plugin>
 						<groupId>com.spotify</groupId>
 						<artifactId>docker-maven-plugin</artifactId>
-						<version>1.0.0</version>
+						<!-- Upgrading to 1.2.0 breaks deploying with credentials, see https://github.com/spotify/docker-maven-plugin/issues/309 -->
+						<version>1.1.1</version>
+
+						<dependencies>
+							<dependency>
+								<groupId>javax.activation</groupId>
+								<artifactId>activation</artifactId>
+								<version>1.1.1</version>
+							</dependency>
+						</dependencies>
+
 						<executions>
 							<execution>
 								<!-- Build x86_64 image -->
@@ -362,7 +438,6 @@
 					<!-- Make sure we don't deploy to artifactory -->
 					<plugin>
 						<artifactId>maven-deploy-plugin</artifactId>
-						<version>2.8.2</version>
 						<configuration>
 							<skip>true</skip>
 						</configuration>
@@ -372,6 +447,7 @@
 		</profile>
 
 		<profile>
+			<!-- This profile is for how to release THIS pom, not the children -->
 			<id>release</id>
 
 			<distributionManagement>
@@ -381,40 +457,6 @@
 					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 				</repository>
 			</distributionManagement>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>license-maven-plugin</artifactId>
-						<version>1.14</version>
-						<executions>
-							<execution>
-								<id>add-third-party</id>
-								<goals>
-									<goal>add-third-party</goal>
-								</goals>
-								<phase>generate-sources</phase>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 
 	</profiles>
